--- a/public/css/blogs.css
+++ b/public/css/blogs.css
@@ -9,3 +9,350 @@ h1, h2, h3, h4 {
 .p6 p{
   color: #67a;
 }
+
+.blog_header{
+	margin-top: 17%;
+}
+
+@font-face {
+	font-family: "sansation";
+	src: url("../fonts/sansation/Sansation_Regular.ttf");
+}
+
+@font-face{
+	font-family: "sansationBold";
+	src: url("../fonts/sansation/Sansation_Bold.ttf");
+}
+
+.blog_title{
+	color: #000000 !important;
+	font-size: 3.1em;
+	font-weight: 400;
+	text-align: left;
+	font-family: "sansation";
+	line-height: 55px;
+	width: 80%;
+	margin-bottom: 2%;
+}
+
+.blog_title_subtext{
+	color: #000000 !important;
+	font-size: 1.2em;
+	text-align: left;
+	line-height: 20px;
+	width: 75%;
+	font-weight: 400;
+	font-family: "sansation";
+	margin-bottom: 2%;
+}
+
+.min_read{
+	color: rgba(0, 0, 0, 0.51) !important;
+	text-align: left;
+	font-size: 1em;
+	font-family: "sansation";
+	margin-bottom: 2%;
+}
+
+.margin_bottom_none{
+	margin-bottom: 0;
+}
+
+.margin_right_none{
+	margin-right: 0;
+}
+.main_body{
+	margin-top: 5%;
+}
+
+.email_input{
+	margin-top: 1%;
+}
+
+.blog_writer{
+	color: #000000 !important;
+	font-size: 1.1em;
+	text-align: left;
+	line-height: 15px;
+	font-weight: 400;
+	font-family: "sansation";
+}
+
+.profile_pic {
+	height: 10vh;
+	width: 10vh;
+	border-radius: 50%;
+	float: left;
+	margin-left: 5%;
+	margin-right: 3%;
+}
+
+.name_date{
+	float: left;
+	margin-top: 4%;
+}
+
+#Ray_Lam{
+	background-image: url('../img/Ray.png');
+	background-size: cover;
+	background-position: center;
+}
+#Dawson{
+	background-image: url('../img/Dawson.JPG');
+	background-size: cover;
+	background-position: center;
+}
+
+.download{
+	width: 80%;
+}
+
+.download_button{
+	margin-top: 0;
+	color: #fff;
+	background-color: #E00606;
+	border-radius: 10px;
+	font-weight: 400;
+	height: 5vh;
+	width: 8vw;
+}
+
+.main_paragraph{
+	font-family: "sansation";
+	color: #000000 !important;
+	font-size: 1.5em;
+	text-align: left;
+	margin-right: 18%;
+	margin-left: 18%;
+
+	font-weight: normal;
+	line-height: 28px;
+	letter-spacing: 0.03em;
+}
+
+.main_body_title{
+	color: #000000 !important;
+	font-size: 2.3em;
+	text-align: left;
+	margin-right: 18%;
+	margin-left: 18%;
+	font-weight: 600;
+	font-family: "sansation"
+}
+
+.main_body_subtitle{
+	color: #000000 !important;
+	font-size: 1.4em;
+	text-align: left;
+	margin-right: 18%;
+	margin-left: 18%;
+	font-weight: 600;
+	font-family: "sansation";
+	letter-spacing: .03em;
+}
+
+.blog_image{
+	width: 50vw;
+	height: 50vh;
+	margin-top: 4%;
+	margin-bottom: 4%;
+}
+
+#Blog_How_Img1{
+	background-image: url('../img/How_Blog_Img1.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
+#Blog_How_Img2{
+	background-image: url('../img/How_Blog_Img2.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
+#Blog_Saving_Img1{
+	background-image: url('../img/Saving_Blog_Img1.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
+#Blog_Saving_Img2{
+	background-image: url('../img/Saving_Blog_Img02.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
+#Blog_Saving_Img3{
+	background-image: url('../img/Saving_Blog_Img03.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
+#Blog_Types_Img2{
+	background-image: url('../img/Types_Blog_Img02.jpg');
+	background-size: cover;
+	background-position: center;
+}
+
+.more_links li::before {
+	content: "\2022";
+	color: #000000 !important;
+	font-weight: bold;
+  	display: inline-block;
+ 	width: 1em;
+  	margin-left: -1em;
+}
+
+.more_links li{
+	color: #000000 !important;
+	text-align: left;
+	margin-left: 20%;
+	font-size: 1.2em;
+}
+
+.more_links a {
+	color: #000000 !important;
+	text-decoration-line: underline;
+}
+
+.bold_text{
+	font-weight: 700;
+	color: #000000 !important;
+}
+.list {
+	margin-left: 20%;
+	width: 50%;
+	text-align: left;
+}
+.list li::before {
+	content: "\2022";
+	color: #000000 !important;
+	font-weight: bold;
+  	display: inline-block;
+ 	width: .9em;
+ 	font-size: 1.2em;
+}
+.list li{
+	margin-bottom: 2%;
+}
+.list li span{
+	color: #000000 !important;
+	font-size: 1.2em;
+}
+.non_bold{
+	font-weight: 400 !important;
+	color: #000000 !important;
+}
+.boldSansation{
+	font-family: "sansationBold" !important;
+}
+.italic{
+	font-style: italic;
+	font-weight: 400 !important;
+}
+.no-margin-bottom{
+	margin-bottom: 0 !important;
+}
+.splashbackground{
+	width: 100%;
+	height: 40vh;
+}
+.blog-links{
+	margin-top: 7%;
+}
+.link{
+	text-align: left;
+	font-weight: bold;
+}
+.link h4 {
+	color: #000000 !important;
+	font-family: "sansationBold";
+	margin-top: 3%;
+	margin-bottom: 0;
+}
+.link h4:hover {
+	color: #6b7380 !important;
+}
+.link h5 {
+	color: #000000 !important;
+	margin-bottom: 0;
+}
+.link h6{
+	margin-bottom: 0;
+}
+.subtitle_blog_landing{
+	color: #858585 !important;
+}
+.italics{
+	font-style: italic;
+	color: #858585 !important;
+}
+#save{
+	background-image: url('../img/Saving_Blog_Img01.jpg');
+	background-size: cover;
+	background-position: center;
+}
+#change{
+	background-image: url('../img/VRCorpo1.jpg');
+	background-size: cover;
+	background-position: center;
+}
+#types{
+	background-image: url('../img/Types_Blog_Img01.png');
+	background-size: cover;
+	background-position: center;
+}
+#case {
+	background-image: url('../img/AF.JPG');
+	background-size: cover;
+	background-position: center;
+	margin-top: 10%;
+}
+.overlay-blog{
+	background-color: #000000;
+	opacity: 0.5;
+	position: absolute;
+	bottom: 0;
+}
+
+#eagle_blog{
+	background-image: url('../img/Eagle1.png');
+	background-size: cover;
+	background-position: center;
+}
+
+@media only screen
+and (min-device-width : 300px)
+and (max-device-width : 768px) {
+	.main_paragraph{
+		font-size: 1em;
+		margin-right: 5%;
+		margin-left: 5%;
+	}
+	.blog_image{
+		width: 100%;
+	}
+	.main_body_title{
+		margin-left: 5%;
+	}
+	.main_body_subtitle{
+		margin-left: 5%;
+	}
+	.list{
+		margin-left: 5%;
+		width: 90%;
+	}
+	.blog_header{
+		margin-top: 5%;
+	}
+	.more_links li{
+		margin-left: 8%;
+		width: 80%;
+	}
+	.profile_pic{
+		margin-left: 0;
+	}
+	.download{
+		width: 100%;
+	}
+}
