--- a/views/blog_usecases.hbs
+++ b/views/blog_usecases.hbs
@@ -1,14 +1,31 @@
 <html>
 
 <head>
-	<link href="/css/newindex.css" rel="stylesheet" type="text/css" media="all" />
+	<!-- <link href="/css/newindex.css" rel="stylesheet" type="text/css" media="all" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="/css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="/css/set1.css" />
-    <link rel="stylesheet" type="text/css" href="/css/blog.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/blog.css"/> -->
+
+		<link href="/css/newindex.css" rel="stylesheet" type="text/css" media="all" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../public/slick/slick-theme.css"/>
+		<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+		<link rel="stylesheet" type="text/css" href="../public/css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="../public/css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="../public/css/set1.css" />
+	  <link rel="stylesheet" type="text/css" href="../public/css/blog.css"/>
+		<link rel="stylesheet" href="../public/css/output-styles.css">
+		<link rel="stylesheet" href="../public/css/modalcss.css">
+		<link rel="stylesheet" href="../public/js/bootstrap.js">
+
+
+		<script src="../public/js/download.js"></script>
+		<script src="../public/js/FileSaver.js"></script>
+
 
     <style type="text/css">
         .navLink {
@@ -20,6 +37,27 @@
 </head>
 
 <body id = "newindex">
+
+	<!--==================
+	 NAV SECTION
+	==================-->
+
+	<header class="text-gray-700 body-font">
+			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
+				<a href="/" class="flex items-center mb-4 md:mb-0  z-10">
+					<img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+				</a>
+				<nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+					<a href="/about" class="mr-5 hover:text-gray-900 hover:bg-gray-100">About</a>
+					<a href="/services" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Solutions</a>
+					<a href="/partners" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Partners</a>
+					<a href="/careers" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Careers</a>
+					<a href="/blogs" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Blogs</a>
+					<a href="/contact" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Contact</a>
+				</nav>
+			</div>
+	</header>
+	<hr class="-mt-4">
 
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -36,36 +74,33 @@
 
 		<section class="cover fullscreen image-bg parallax slider-10-1485812436050" style="height: auto; background: #ffffff !important; opacity: 1 !important">
 
-		            <div class="container">
+		            <div class="container p-4 mx-auto">
 		                <div class="row">
-                            <div class="blog_header">
+                      <div class="blog_header flex">
 		                    <div class="col-md-6">
-                                <h2 class="blog_title">How VR is Changing Corporate Training</h2>
-                                <h4 class="blog_title_subtext">VR is bringing powerful and progressive changes to how training is being done in the workplace.</h4>
-                                <h5 class="min_read">5 MIN READ</h5>
-                                <div class="profile">
-                                    <div class="profile_pic" id="Ray_Lam"></div>
-                                    <div class="name_date">
-                                        <h4 class="blog_writer margin_bottom_none margin_right_none"> Written By Ray Lam</h4>
-                                        <h4 class="blog_writer">8/7/2019</h4>
-                                    </div>
+                            <h2 class="blog_title">How VR is Changing Corporate Training</h2>
+                            <h4 class="blog_title_subtext">VR is bringing powerful and progressive changes to how training is being done in the workplace.</h4>
+                            <h5 class="min_read">5 MIN READ</h5>
+                            <div class="profile">
+                                <div class="profile_pic" id="Ray_Lam"></div>
+                                <div class="name_date">
+                                    <h4 class="blog_writer margin_bottom_none margin_right_none"> Written By Ray Lam</h4>
+                                    <h4 class="blog_writer">8/7/2019</h4>
                                 </div>
-                                <div class="clear"></div>
-                                <div class="download">
-                                    <h5 class="min_read" style="text-align: center;">Read this article as a pdf.</h5>
-                                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signup">
-                                     Download PDF
-                                    </button>
-                                </div>
-
-
-
                             </div>
-                            <div class="col-md-6">
-                                <img src="/img/VRCorpo1.jpg">
-
+                            <div class="clear"></div>
+                          	</div>
+                            <div class="col-md-4  w-1/2">
+                                <img src="../public/img/VRCorpo1.jpg">
                             </div>
-                        </div>
+                  		</div>
+											<div class="downloadBlock">
+												<button type="button" class="btn btn-primary border-2 border-gray-200 p-4 m-4 hover:text-gray-100 hover:bg-gray-900" data-toggle="modal" data-target="#signup">
+													Download PDF
+												 </button>
+												 <br>
+											 <span class="min_read" style="text-align: center;">Read this article as a pdf.</span>
+										 </div>
 
                         <div class="clear"></div>
 
@@ -155,38 +190,38 @@
         </section>
 
           <!-- Modal -->
-                                <div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                  <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                      <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Download a PDF of our VR Guide</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                          <span aria-hidden="true">&times;</span>
-                                        </button>
-                                      </div>
-                                      <div class="modal-body" style="padding-top: 0;">
+					<div class="modal fade text-secondary" id="signup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="exampleModalLabel">Download a PDF of our VR Guide</h5>
+									<button class="border-2 border-gray-200 p-4 m-4 hover:text-gray-900 hover:bg-gray-100 float-right" type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body" style="padding-top: 0;">
 
-                                          <div class="form-row">
-                                            <div class="form-group col-md-12">
-                                            <label style="color: black">Enter your email to download our intro to VR/XR training guide.</label>
-                                              <h5 style="color: red; display: none; margin-bottom: 0;" id="check">Please Enter a valid email address.</h5>
-                                              <input type="email" class="form-control email_input" id="inputEmail" placeholder="Email">
-                                              <br>
-                                              <h4 style="color: black; display: none;" id="thankyou">Thank you!</h4>
-
-
-                                            </div>
-                                        </div>
+										<div class="form-row">
+											<div class="form-group col-md-12">
+											<label class=" text-secondary">Enter your email to download our intro to VR/XR training guide.</label>
+												<h5 class=" text-secondary" style="color: red; display: none; margin-bottom: 0;" id="check">Please Enter a valid email address.</h5>
+												<input type="email" class="form-control email_input" id="inputEmail" placeholder="Email">
+												<br>
+												<h4 style="color: black; display: none;" id="thankyou">Thank you!</h4>
 
 
-                                      </div>
-                                      <div class="modal-footer" style="border-top: 0px">
-                                        <button type="button" class="btn btn-secondary no-margin-bottom" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" id="download">Download</button>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
+											</div>
+									</div>
+
+
+								</div>
+								<div class="modal-footer text-secondary" style="border-top: 0px">
+									<button type="button" class="btn btn-secondary border-2 border-gray-200 p-4 m-4 hover:text-gray-900 hover:bg-gray-100" data-dismiss="modal">Close</button>
+									<button type="button" class="btn btn-primary border-2 border-gray-200 p-4 m-4 hover:text-gray-900 hover:bg-gray-100" id="download">Download</button>
+								</div>
+							</div>
+						</div>
+					</div>
 
 
 	</div>
