--- a/views/case_USAF.hbs
+++ b/views/case_USAF.hbs
@@ -1,14 +1,31 @@
 <html>
 
 <head>
-	<link href="/css/newindex.css" rel="stylesheet" type="text/css" media="all" />
+	<!-- <link href="/css/newindex.css" rel="stylesheet" type="text/css" media="all" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="/css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="/css/set1.css" />
-    <link rel="stylesheet" type="text/css" href="/css/blog.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/blog.css"/> -->
+
+		<link href="/css/newindex.css" rel="stylesheet" type="text/css" media="all" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../public/slick/slick-theme.css"/>
+		<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+		<link rel="stylesheet" type="text/css" href="../public/css/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="../public/css/demo.css" />
+		<link rel="stylesheet" type="text/css" href="../public/css/set1.css" />
+	  <link rel="stylesheet" type="text/css" href="../public/css/blog.css"/>
+		<link rel="stylesheet" href="../public/css/output-styles.css">
+		<link rel="stylesheet" href="../public/css/modalcss.css">
+		<link rel="stylesheet" href="../public/js/bootstrap.js">
+
+
+		<script src="../public/js/download.js"></script>
+		<script src="../public/js/FileSaver.js"></script>
+
 
     <style type="text/css">
         .navLink {
@@ -20,6 +37,27 @@
 </head>
 
 <body id = "newindex">
+
+	<<!--==================
+	 NAV SECTION
+	==================-->
+
+	<header class="text-gray-700 body-font">
+			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
+				<a href="/" class="flex items-center mb-4 md:mb-0  z-10">
+					<img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+				</a>
+				<nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+					<a href="/about" class="mr-5 hover:text-gray-900 hover:bg-gray-100">About</a>
+					<a href="/services" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Solutions</a>
+					<a href="/partners" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Partners</a>
+					<a href="/careers" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Careers</a>
+					<a href="/blogs" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Blogs</a>
+					<a href="/contact" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Contact</a>
+				</nav>
+			</div>
+	</header>
+	<hr class="-mt-4">
 
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -36,9 +74,9 @@
 
 		<section class="cover fullscreen image-bg parallax slider-10-1485812436050" style="height: auto; background: #ffffff !important; opacity: 1 !important">
 
-		            <div class="container">
+		            <div class="container p-4 mx-auto">
 		                <div class="row">
-                            <div class="blog_header">
+                            <div class="blog_header flex">
 		                    <div class="col-md-6">
                                 <h2 class="blog_title">Case Study: Aircraft Maintenance VR</h2>
                                 <h4 class="blog_title_subtext">How VINCI is redefining training in the <br> United States Air Force.</h4>
@@ -50,22 +88,19 @@
                                         <h4 class="blog_writer">09/04/2019</h4>
                                     </div>
                                 </div>
-                                <div class="clear"></div>
-                                <div class="download">
-                                    <h5 class="min_read" style="text-align: center;">Read this article as a pdf.</h5>
-                                   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signup">
-                                     Download PDF
-                                    </button>
-                                </div>
-
-
-
-                            </div>
-                            <div class="col-md-6">
-                                <img src="/img/AF.JPG">
-
+                                <div class="clear"></div></div>
+                            <div class="col-md-6 w-1/2">
+                                <img src="../public/img/AF.JPG">
                             </div>
                         </div>
+
+												<div class="downloadBlock">
+													<button type="button" class="btn btn-primary border-2 border-gray-200 p-4 m-4 hover:text-gray-100 hover:bg-gray-900" data-toggle="modal" data-target="#signup">
+														Download PDF
+													 </button>
+													 <br>
+												 <span class="min_read" style="text-align: center;">Read this article as a pdf.</span>
+											 </div>
 
                         <div class="clear"></div>
 
@@ -95,7 +130,7 @@
 
                            </p>
 
-                        
+
 
 
 
