--- a/views/casestudies.hbs
+++ b/views/casestudies.hbs
@@ -1,18 +1,56 @@
 <html>
 
 <head>
-	<link href="/css/newindex.css" rel="stylesheet" type="text/css" media="all" />
+	<!-- <link href="../public/css/index.css" rel="stylesheet" type="text/css" media="all" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="/slick/slick-theme.css"/>
+	<link rel="stylesheet" type="text/css" href="../public/css/slick-theme.css"/>
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 
-	<link rel="stylesheet" type="text/css" href="/css/normalize.css" />
-	<link rel="stylesheet" type="text/css" href="/css/demo.css" />
-	<link rel="stylesheet" type="text/css" href="/css/set1.css" />
+	<link rel="stylesheet" type="text/css" href="../public/css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="../public/css/demo.css" />
+	<link rel="stylesheet" type="text/css" href="../public/css/set1.css" /> -->
+
+	<link href="/css/newindex.css" rel="stylesheet" type="text/css" media="all" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="../public/slick/slick-theme.css"/>
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="../public/css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="../public/css/demo.css" />
+	<link rel="stylesheet" type="text/css" href="../public/css/set1.css" />
+  <link rel="stylesheet" type="text/css" href="../public/css/blog.css"/>
+	<link rel="stylesheet" href="../public/css/output-styles.css">
+	<link rel="stylesheet" href="../public/css/modalcss.css">
+	<link rel="stylesheet" href="../public/js/bootstrap.js">
+
+
+	<script src="../public/js/download.js"></script>
+	<script src="../public/js/FileSaver.js"></script>
+
 
 </head>
 
 <body id = "newindex">
+
+	<!--==================
+	 NAV SECTION
+	==================-->
+
+	<header class="text-gray-700 body-font">
+			<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
+				<a href="/" class="flex items-center mb-4 md:mb-0  z-10">
+					<img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+				</a>
+				<nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+					<a href="/about" class="mr-5 hover:text-gray-900 hover:bg-gray-100">About</a>
+					<a href="/services" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Solutions</a>
+					<a href="/partners" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Partners</a>
+					<a href="/careers" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Careers</a>
+					<a href="/blogs" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Blogs</a>
+					<a href="/contact" class="mr-5 hover:text-gray-900 hover:bg-gray-100">Contact</a>
+				</nav>
+			</div>
+	</header>
+	<hr class="-mt-4">
 
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -37,13 +75,13 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				      </button>
-				     
-				     
+
+
 				      <a class="navbar-brand logoText" href="/indexnew" style="margin-top: 15px; margin-bottom: 2px; padding-left: 0px; font-size: 1.3em !important">V I N C I</a>
 				    </div>
 
 				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="margin-top: 15px; color: #FFF !important">
-				    
+
 				      <ul class="nav navbar-nav navbar-right" style="color: #FFF !important; padding-right: 15px; margin-top: 10px">
 				        <a href="/" class="navLink" style="color: #FFF">HOME</a>
 				        <a href="/about" class="navLink" style="color: #FFF">ABOUT</a>
@@ -62,14 +100,14 @@
 
 		<section class="cover fullscreen image-bg overlay parallax slider-10-1487319147192" style="height: 100vh !important;">
 
-           
-                   
+
+
    		<div class="background-image-holder fadeIn" style="background: url(img/eric.JPG); background-size: cover; background-position: center;">
 		</div>
 		            <div class="container v-align-transform">
 		                <div class="row">
 		                    <div class="col-sm-12 text-center">
-		                        
+
 		                        <h2 class="sentence">CASE STUDIES
 								</h2>
 		                    </div>
@@ -77,10 +115,10 @@
 		                </div>
 		                <p id="subtitle" style="font-size: 1.5em"> WHERE WE'VE BEEN</p>
 		            </div>
-		            
-		
+
+
         </section class="text-7-1487319391275 parallax reveal" style="background-color: #202225;">
-        
+
 
         	<h1 class="leftTitle" style="margin-top: 10%; margin-left: 10%;">USING VR TO IMPROVE SOLDIER TRAINING</h1>
 
@@ -94,10 +132,10 @@
         	<a href="http://www.nsrdec.army.mil/" target="_blank" style="margin-left: 1%; margin-right: 10%; text-decoration: underline;">Learn more about Natick Soldier Research </a>
         	</div>
         <section>
-        	
+
 
         <section style="background-color: #202225; padding-top: 0;">
-      
+
 
         	<h1 class="leftTitle" style="margin-top: 10%; margin-left: 10%;">USING VR TO ACCELERATE EARLY STAGE COMPANIES</h1>
 
